# ABC-Service

./: .env.example  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.stack.yml  docker-compose.yml  requirements.txt
interface/: Dockerfile  DockerfileNotOptimized  README.md  conftest.py  env.example  initial_database.py  manage.py  pytest.ini  requirements.txt  settings.py  urls.py
interface/apps/api/: auth.py  console_scripts.py  handlers.py  schema.py
interface/apps/api_drf/: serializers.py  urls.py  views.py  views_without_router.py
interface/apps/chat/: db.py  db_test.py  forms.py  models.py  urls.py  views.py
interface/apps/education/: admin.py  forms.py  models.py  urls.py  views.py
interface/apps/lesson11/: Dockerfile  README.md  app.py  docker-compose.yml  hello.py  requirements.txt  wsgi_example_struct_pep8.py
interface/apps/lesson7/: console_scripts.py  models.py
interface/templates/: 404.html  500.html
interface/tests/: tests.py
playbooks/: push.yml
playbooks/inventory/: hosts
playbooks/tasks/: zoo.yml
stats/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cli.py  pyproject.toml
stats/app/: main.py  settings.py
stats/app/db/: models.py  session.py
stats/app/src/: cli.py  views.py
stats/app/tp_http/: handlers.py  schema.py
stats/app/tp_kafka/: consumer.py  handlers.py  producer.py
stats/app/utils/: base_enum.py  base_schema.py
stats/docs/: КонфигVsCode.json  ПолезныеСсылки.md
stats/migrations/: env.py
stats/tests/: conftest.py
stats/tests/src/: test_src.py
(+21 files in other folders)
